# hss_workorder

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.toml  requirements.txt  setup.py  workorder.py
cds/: Cargo.toml
cds/src/: frontend.rs  lib.rs
cds/src/frontend/: gui.rs  style.rs
core/: Cargo.toml
core/src/: db.rs  lib.rs  part.rs  settings.rs
core/src/db/: mod.rs  schema.rs
core/src/db/schema/: bom.rs  mod.rs  simtrans.rs
core/src/part/: material.rs  mod.rs  part.rs
src/: __init__.py  change_mgmt.py  config.rs  lib.rs  workorder.py
src/db/: mod.rs
src/db/schema/: bom.rs  mod.rs
src/lib/: __init__.py  dict_obj.py  part.py
src/workorder/: workorder.py
workorder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
