[package]
name = "cds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workorder_core = { path = "../core" }

[dependencies.iced]
version = "0.3.0"
features = [ "tokio" ]

[dependencies.tokio]
version = "1.8.1"
features = [ "macros", "net", "rt-multi-thread" ]
